# corelog

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json
cmake/: ClangdCudaCompileDb.cmake  corelogConfig.cmake.in
include/corelog/: corelog.h  cublas_check.h  cuda_check.h  mpi_check.h  nccl_check.h
scripts/: nvcc_to_clang_compile_db.py  run_check_added_large_files_precommit.py  run_check_file_suffix_precommit.py  run_check_yaml_precommit.py  run_clang_tidy_precommit.sh  run_include_path_lint_precommit.py  run_text_hygiene_precommit.py
src/: corelog.cpp  cuda_check.cpp
test/: CMakeLists.txt  test_corelog.cpp  test_cublas_check.cpp  test_cuda_check.cpp  test_mpi_check.cpp  test_nccl_check.cpp
